# Django-UserAuth-Practice

./: manage.py  pyproject.toml
UserAuthToken/: asgi.py  settings.py  wsgi.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
